--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -66,7 +66,7 @@
   white-space: pre-wrap;
 }
 h4 {
-  color: #afec3f;
+  color: #ffcc00;
 }
 #code-inp {
   box-sizing: border-box;
@@ -88,12 +88,12 @@ h4 {
   height: 40px;
   font-size: 22px;
   font-weight: bold;
-  background-color: #afec3f;
+  background-color: #ffcc00;
   border: none;
   border-radius: 4px;
   transition: 0.3s;
   cursor: pointer;
 }
 .run-btn:active {
-  background-color: #6e9427;
+  background-color: #fce101;
 }
