--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,16 +6,16 @@
 }
 .main {
   display: flex;
-  height: calc(100vh - 50px);
+  height: calc(100vh - 150px);
 }
 .left-container {
   position: relative;
   flex: 60%;
-  height: calc(100vh - 50px);
+  height: calc(100vh - 150px);
 }
 .right-container {
   flex: 40%;
-  height: calc(100vh - 50px);
+  height: calc(100vh - 150px);
   display: flex;
   flex-direction: column;
   background-color: #242424;
@@ -60,6 +60,23 @@
   border-radius: 4px;
   transition: 0.3s;
   cursor: pointer;
+}
+.next-btn {
+  position: absolute;
+  bottom: 14px;
+  right: 104px;
+  width: 80px;
+  height: 40px;
+  font-size: 22px;
+  font-weight: bold;
+  background-color: #ffcc00;
+  border: none;
+  border-radius: 4px;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.hidden {
+  display: none;
 }
 .output-box pre {
   font-size: 15px;
