feat: monaco editor value changes between levels

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -114,3 +114,9 @@ h4 {
 .run-btn:active {
   background-color: #fce101;
 }
+
+.compiling-loading {
+  padding: 2px 40px;
+  font-weight: bold;
+  color: white;
+}
