--- a/frontend/src/Components/Navbar.css
+++ b/frontend/src/Components/Navbar.css
@@ -20,6 +20,23 @@
 #no:focus {
   outline: none;
 }
+
+.log-out {
+  display: block;
+  margin-left: auto;
+  margin-right: 20px;
+  width: auto;
+  height: auto;
+  font-size: 18px;
+  font-weight: bold;
+  background-color: #ffcc00;
+  border: none;
+  border-radius: 4px;
+  transition: 0.3s;
+  cursor: pointer;
+  padding: 20px;
+}
+
 .css-2b097c-container {
   width: 120px;
   color: black;
