--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -113,6 +113,20 @@ h4 {
   transition: 0.3s;
   cursor: pointer;
 }
+.help-btn {
+  position: absolute;
+  bottom: 10px;
+  right: 204px;
+  width: 80px;
+  height: 40px;
+  font-size: 22px;
+  font-weight: bold;
+  background-color: #ffcc00;
+  border: none;
+  border-radius: 4px;
+  transition: 0.3s;
+  cursor: pointer;
+}
 .run-btn:active {
   background-color: #fce101;
 }
@@ -121,4 +135,7 @@ h4 {
   padding: 2px 40px;
   font-weight: bold;
   color: white;
+}
+.level {
+  font-size: 17px;
 }
