--- a/frontend/src/Components/Landing.css
+++ b/frontend/src/Components/Landing.css
@@ -2,11 +2,17 @@ html {background-color: #474747}
 
 .landing {
     display: block;
-    margin: auto;
-    width: 24em;
+    margin: 50px auto;
+    width: 70%;
     flex: 40%;
     flex-direction: column;
     padding: 5px;
+}
+
+.title {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 .log-in {
@@ -28,10 +34,10 @@ html {background-color: #474747}
 .landingtext {
     margin-left: auto;
     margin-right: auto;
-    width: 20em;
     flex: 40%;
     color: #ffcc00;
     white-space: pre-line;
     font-size: 24px;
     padding: 20px;
+    text-align: center;
 }
