--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -113,6 +113,32 @@ h4 {
   transition: 0.3s;
   cursor: pointer;
 }
+
+.change-mode {
+  padding: 5px;
+  font-size: 15px;
+  background-color: #ffcc00;
+  border: none;
+  border-radius: 6px;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.change-mode:hover {
+  font-size: 19px;
+}
+
+.leave-game {
+  padding: 5px;
+  font-size: 15px;
+  background-color: white;
+  border: none;
+  border-radius: 6px;
+  transition: 0.3s;
+  cursor: pointer;
+  margin-top: 3px;
+}
+
 .help-btn {
   position: absolute;
   bottom: 10px;
@@ -138,4 +164,87 @@ h4 {
 }
 .level {
   font-size: 17px;
+}
+
+.no-underline {
+  text-decoration: none;
+}
+
+.top-right-corner {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 25px;
+}
+
+h2 {
+  color: #ffcc00;
+  font-size: 45px;
+  font-weight: bold;
+}
+
+h5 {
+  color: #ffcc00;
+  font-size: 25px;
+  font-weight: bold;
+  font-style: italic;
+  margin: 10px 0;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.options {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.big-btn {
+  margin: 0 10px;
+  display: block;
+  font-size: 22px;
+  font-weight: bold;
+  background-color: #ffcc00;
+  border: none;
+  border-radius: 4px;
+  transition: 0.3s;
+  cursor: pointer;
+  padding: 20px;
+}
+
+.big-btn:hover {
+  background-color: white;
+  font-size: 30px;
+  padding: 25px;
+}
+
+.versus-box {
+  background-color: #ffa500; /* orange background color */
+  border-radius: 10px;
+  border: 5px solid #000; /* black border */
+  color: #000; /* black text color */
+  font-size: 18px;
+  padding: 10px 15px;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.versus-box-left {
+  align-items: center;
+}
+
+.opponent-level {
+  padding-left: 10px;
+  font-size: 50px;
+  font-weight: bold;
+  margin-left: auto;
 }
