--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -82,6 +82,16 @@
   font-size: 15px;
   white-space: pre-wrap;
 }
+
+h1 {
+  color: #ffcc00;
+  font-size: 65px;
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 10px;
+}
+
 h4 {
   color: #ffcc00;
   white-space: pre-line;
@@ -126,6 +136,42 @@ h4 {
 
 .change-mode:hover {
   font-size: 19px;
+}
+
+.change-mode-corner {
+  position: absolute;
+  bottom: 14px;
+  right: 18px;
+  padding: 5px;
+  font-size: 20px;
+  background-color: #ffcc00;
+  border: none;
+  border-radius: 6px;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.change-mode-corner:hover {
+  font-size: 25px;
+}
+
+.join-room-btn {
+  margin-top: 3px;
+}
+
+.leave-room-btn {
+  margin-top: 10px;
+}
+
+.room-id-input {
+  padding: 10px;
+  border: 1px solid #d9d9d9;
+  border-radius: 24px;
+  background: #f1f1f1;
+  font-size: 16px;
+  color: #444;
+  width: 400px;
+  outline: none;
 }
 
 .leave-game {
@@ -226,6 +272,10 @@ h5 {
   padding: 25px;
 }
 
+.create-room-btn {
+  margin-bottom: 20px;
+}
+
 .versus-box {
   background-color: #ffa500; /* orange background color */
   border-radius: 10px;
@@ -247,4 +297,34 @@ h5 {
   font-size: 50px;
   font-weight: bold;
   margin-left: auto;
+}
+
+.construction-vibes {
+  background-color: #f5f5f5;
+  border: 2px dashed #ee6c4d;
+  border-radius: 10px;
+  color: #ee6c4d;
+  font-family: Arial, sans-serif;
+  font-size: 20px;
+  margin: 20px;
+  padding: 20px;
+  text-align: center;
+  text-shadow: 1px 1px 1px #fff;
+}
+
+.construction-vibes .room-id {
+  background-color: #ee6c4d;
+  border-radius: 5px;
+  color: #fff;
+  display: inline-block;
+  font-size: 36px;
+  font-weight: bold;
+  margin-top: 20px;
+  padding: 10px;
+  text-align: center;
+  text-shadow: none;
+}
+
+.play-again {
+  margin-top: 20px;
 }
